--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
        # note: this docker image already has gometalinter + glide, so we do not need
        - image: azuka/ci-golang:1.9
     environment:
-      - GOPATH: /go
+      - GOPATH: ~/go
       - CIRCLE_TEST_RESULTS: /tmp/test-results
     steps:
       - checkout
