--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/go/src/github.mheducation.com/goplaygound/goci
+    working_directory: /go/src/github.mheducation.com/goplaygound/goci
     docker:
        # note: this docker image already has gometalinter + glide, so we do not need
        - image: azuka/ci-golang:1.9
@@ -10,12 +10,6 @@ jobs:
       - CIRCLE_TEST_RESULTS: /tmp/test-results
     steps:
       - checkout
-      - run:
-          name: Initialize the build & Install requirements
-          command: |
-            curl https://glide.sh/get | sh
-            mkdir -p $CIRCLE_TEST_RESULTS
-            make init-circle
       - run:
           name: Run Circle Linter
           command: |
